- fix white-on-white issue - implement custom separator in add from clipboard